# ablestack-cockpit

pkg/apps/: manifest.json
pkg/kdump/: manifest.json
pkg/networkmanager/: firewall.jsx  interfaces.js  manifest.json  network-interface.jsx  network-main-dialogs.jsx  network-main.jsx
pkg/packagekit/: manifest.json
pkg/playground/: manifest.json
pkg/selinux/: manifest.json
pkg/shell/: credentials.js  index.html  indexes.js
pkg/sosreport/: manifest.json
pkg/static/: login.html  login.js
pkg/storaged/: manifest.json
pkg/systemd/: manifest.json
pkg/users/: manifest.json
po/: ko.po
src/branding/centos/: Makefile.am  branding.css
src/ws/: pam_cockpit_cert.c
